--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header></header>
+    </div>
+    <header class="nav">
+      <h1>Cn.</h1>
+      <nav class="options">
+        <ul>
+          <li>Inicio</li>
+          <li>Sobre mi</li>
+          <li>Educacion</li>
+          <li>Proyectos</li>
+        </ul>
+      </nav>
+      <a href="#contactos"><button>Contacto</button></a>
+    </header>
+    <main>
+        <section class="containerSection">Sobre mi:</section>
+        <section class="containerSection">Educacion:</section>
+        <section class="containerSection">Proyectos:</section>
+        <section class="containerSection">Contacto:</section>
+    </main>
   </body>
+  <footer>
+    ©2025 Nahuel Castro
+    <div class="redesfooter">
+      <img src="" alt="instagram propietario" />
+      <img src="" alt="githhub propietario" />
+    </div>
+  </footer>
 </html>
