Aplicacion de media queries para sector de Inicio y Sobre mi, y ajustes en el html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
         <section id="inicio" class="containerSection">
-          <div>
+          <div class="content">
               Hola, mi nombre es 
               <span class="color-text">Nahuel Castro</span>
               <br>
@@ -35,18 +35,27 @@
               </p>
           </div>    
         </section>
-        <section id="sobre-mi" class="containerSection">Sobre mi:
-          <br>
-          VAMO BOCAAAAA
-          AGUANTEN LAS PASTAS EL HELADO Y LAS OTAKU
+        <section id="sobre-mi" class="containerSection">
+            <h2>SOBRE MI</h2>
+            <div class="sm-container">
+              <img src="./images/Mesa de trabajo 1.png" alt="Persona con laptop">
+              <div class="sm-text">
+                  <p>Soy un apasionado del <b>diseño gráfico</b>, la <b>edición visual</b> y el <b>desarrollo web.</b></p>
+                  <p>Actualmente estudio Ingeniería Informática en la <b>Universidad Nacional de La Matanza</b>, y complemento mi formación técnica con cursos especializados en desarrollo web ofrecidos por la <b>Universidad Tecnológica Nacional</b>.</p>
+                  <p>Me considero una persona <b>metódica</b>, <b>adaptable</b> y <b>orientada a objetivos</b>. Disfruto aprender constantemente y aplicar mis conocimientos en proyectos que integren tecnología, diseño y cultura visual.</p>
+              </div>
+            </div>
+            <p>Este portfolio es una sintesis de mis aptitudes y conocimientos los cuales busco emplear para crear soluciones digitales que conecten con las personas.</p>            
+            <p><a href="./images/CV-NahuelCastro.pdf" target="_blank" rel="noopener noreferrer">Ver CV</a></p>
         </section>
-        <section id="educacion" class="containerSection">Educacion:</section>
-        <section id="proyectos" class="containerSection">Proyectos:</section>
-        <section id="contacto" class="containerSection">Contacto:</section> 
+        <section id="educacion" class="containerSection"><h2>HABILIDADES</h2></section>
+        <section id="proyectos" class="containerSection"><h2>PROYECTOS</h2></section>
+        <section id="contacto" class="containerSection"><h2>CONTACTO</h2></section> 
     <script text="text-js" src="script.js"></script>
   </body>
   <footer>
-    <span>©2025 Nahuel Castro</span>
+    <span>Designed and Developed by Soumyajit Behera
+Copyright © 2025 SB</span>
     </div>
   </footer>
 </html>
