diseño de footer

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <script text="text-js" src="script.js"></script>
   </body>
   <footer>
-    <span>Designed and Developed by Soumyajit Behera
-Copyright © 2025 SB</span>
+    <a href="#inicio"><img src="./images/keyboard_control_key_50dp_E4E6ED_FILL0_wght400_GRAD0_opsz48.png" alt="boton volver al inicio"></a>
+    <hr>
+    <p>Desarollado por Nahuel Castro</p>
+    <p><span>Copyright © 2025</span></p>
     </div>
   </footer>
 </html>
