--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Nahuel Castro</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="./images/favicon.png">
   </head>
   <body>
     <nav class="nav">
