se trabajo en la section contactos, agregando links y las section proyectos y habilidades en proceso

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-list">
                 <li class="nav-option"><a class="nav-link" href="#inicio">Inicio</a></li>
                 <li class="nav-option"><a class="nav-link" href="#sobre-mi">Sobre mi</a></li>
-                <li class="nav-option"><a class="nav-link" href="#educacion">Educacion</a></li>
+                <li class="nav-option"><a class="nav-link" href="#habilidades">Habilidades</a></li>
                 <li class="nav-option"><a class="nav-link" href="#proyectos">Proyectos</a></li>
                 <li class="nav-option"><a id="btn-contacto" class="nav-link" href="#contacto">Contacto</a></li>
             </ul>
@@ -49,9 +49,28 @@
             <p>Este portfolio es una sintesis de mis aptitudes y conocimientos los cuales busco emplear para crear soluciones digitales que conecten con las personas.</p>            
             <p><a href="./images/CV-NahuelCastro.pdf" target="_blank" rel="noopener noreferrer">Ver CV</a></p>
         </section>
-        <section id="educacion" class="containerSection"><h2>HABILIDADES</h2></section>
-        <section id="proyectos" class="containerSection"><h2>PROYECTOS</h2></section>
-        <section id="contacto" class="containerSection"><h2>CONTACTO</h2></section> 
+        <section id="habilidades" class="containerSection">
+          <h2>HABILIDADES</h2>
+          <div class="h-container">
+              <p>Aquí encontraras las herramientas las cuales utilizo, asi tambien con aquellas las cuales me encuentro en formacion y aprendiendo.</p>
+          </div>
+        </section>
+        <section id="proyectos" class="containerSection">
+          <div class="p-container">
+            <h2>PROYECTOS</h2>
+            <p>Próximamente...</p>
+          </div>
+        </section>
+        <section id="contacto" class="containerSection">
+          <h2>CONTACTO</h2>
+          <p>Podes encontrarme en las siguientes redes sociales</p>
+          <div class="c-container">
+              <a href="https://web.whatsapp.com/send/?phone=541127414174" target="_blank" rel="noopener noreferrer"><img id="wsp" src="./images/whatsapp.png" alt="whatsapp"></a>
+              <a href="https://www.instagram.com/nahuel.ezequiel_/" target="_blank" rel="noopener noreferrer"><img id="ig" src="./images/instagram.png" alt="instagram"></a>
+              <a href="https://github.com/nahuelcstr" target="_blank" rel="noopener noreferrer"><img id="gh" src="./images/github.png" alt="github"></a>
+              <a href="mailto:nahuel.castro.0ne@gmail.com" target="_blank" rel="noopener noreferrer"><img id="email" src="./images/mail.png" alt="email" ></a>
+          </div>
+        </section> 
     <script text="text-js" src="script.js"></script>
   </body>
   <footer>
