--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
         </section>
         <section id="habilidades" class="containerSection">
           <h2>HABILIDADES</h2>
+          <p>Aquí encontraras las herramientas las cuales utilizo, asi tambien con aquellas las cuales me encuentro en formacion y aprendiendo.</p>
+
           <div class="h-container">
-              <p>Aquí encontraras las herramientas las cuales utilizo, asi tambien con aquellas las cuales me encuentro en formacion y aprendiendo.</p>
-          </div>
+              <img src="./images/html5.png" alt="html logo">
+              <img src="./images/css.png" alt="css logo">
+              <img src="./images/js.png" alt="javascript logo">
+            </div>
         </section>
         <section id="proyectos" class="containerSection">
           <div class="p-container">
